--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,62 @@
-body { margin: 0; padding: 0; }
+body { 
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    overflow: hidden;
+    flex-wrap: wrap;
+}
 html, body, #map { height: 100%; }
+
+header {
+    flex-basis: 100%;
+}
+
+#filter-sidebar {
+    width: 200px;
+    background-color: #FFFFFF !important;
+    color: #000;
+    padding: 0px;
+    box-sizing: border-box;
+    overflow-y: auto;
+    height: calc(100vh - 62.25px);
+
+}
+
+#filter-sidebar summary {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+#filter-sidebar summary, .data-filters {
+    padding: 16px;
+}
+
+/* Responsive Design */
+@media (min-width: 600px) {
+    #filter-sidebar {
+        width: 100px;
+    }
+}
+
+@media (min-width: 900px) {
+    #filter-sidebar {
+        width: 200px;
+    }
+}
+
+#map {
+    flex: 1;
+}
+
+select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
