--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,51 @@
 body { 
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: row;
+    /* display: flex;
+    flex-direction: row; */
     width: 100vw;
     overflow: hidden;
     flex-wrap: wrap;
 }
 html, body, #map { height: 100%; }
 
-header {
-    flex-basis: 100%;
-}
-
-#filter-sidebar {
-    width: 200px;
+#map-filters {
     background-color: #FFFFFF !important;
     color: #000;
-    padding: 0px;
     box-sizing: border-box;
-    overflow-y: auto;
-    height: calc(100vh - 62.25px);
-
+    position: absolute;
+    width: fit-content;
+    top: 0;
+    left: 0;
+    margin: 20px;
+    padding: 18px;
+    z-index: 100;
+    border-radius: 12px;
 }
 
-#filter-sidebar summary {
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 29px;
-    letter-spacing: 0em;
-    text-align: left;
-    border: 1px solid #ddd;
+#map-filters fieldset {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
 }
 
-#filter-sidebar summary, .data-filters {
-    padding: 16px;
+.filter-group {
+    display: flex;
+    flex-direction: column;
 }
 
-/* Responsive Design */
-@media (min-width: 600px) {
-    #filter-sidebar {
-        width: 100px;
-    }
+#map-filters label {
+    margin-bottom: 0.5rem;
+    font-size: small;
 }
 
-@media (min-width: 900px) {
-    #filter-sidebar {
-        width: 200px;
-    }
+#map-filters select {
+    width: 100%;
 }
 
-#map {
-    flex: 1;
-}
 
 select {
-    width: 100%;
+    width: 200px;
     padding: 10px;
     margin-bottom: 10px;
     box-sizing: border-box;
