--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ html, body, #map { height: 100%; }
     margin: 20px;
     padding: 18px;
     z-index: 100;
-    border-radius: 12px;
+    border-radius: 5px;
 }
 
 #map-filters fieldset {
@@ -40,13 +40,45 @@ html, body, #map { height: 100%; }
 }
 
 #map-filters select {
-    width: 100%;
-}
-
-
-select {
-    width: 200px;
+    width: fit-content;
     padding: 10px;
     margin-bottom: 10px;
     box-sizing: border-box;
+}
+
+.legend-ctrl {
+    width: 140px;
+    padding: 6px 8px;
+    font-size: 1em;
+    background: rgba(255, 255, 255);
+    border-radius: 5px;
+}
+
+.legend-ctrl h3 {
+    font-size: 1.1em;
+    font-weight: bold;
+    line-height: 1em;
+    margin: 0;
+}
+
+.legend-ctrl h3 span {
+    font-size: 1.3em;
+    margin: 0 20px 0 0;
+}
+
+.legend-ctrl ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 12px 4px 0;
+}
+
+.legend-ctrl li {
+    height: 22px;
+}
+
+.legend-ctrl span {
+    width: 30px;
+    height: 20px;
+    float: left;
+    margin-right: 10px;
 }
