--- a/styles.css
+++ b/styles.css
@@ -57,13 +57,15 @@ html, body, #map { height: 100%; }
 .legend-ctrl h3 {
     font-size: 1.1em;
     font-weight: bold;
-    line-height: 1em;
+    line-height: 1.1em;
     margin: 0;
 }
 
-.legend-ctrl h3 span {
-    font-size: 1.3em;
-    margin: 0 20px 0 0;
+.legend-ctrl h4 {
+    font-size: 1em;
+    font-weight: bold;
+    line-height: 1em;
+    margin: 0;
 }
 
 .legend-ctrl ul {
