--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,10 @@ html, body, #map { height: 100%; }
     float: left;
     margin-right: 10px;
 }
+
+.zoom-ctrl {
+    z-index: 10;
+    background: rgba(255, 255, 255);
+    border-radius: 3px;
+    padding: 10px;
+}
