--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,12 @@ html, body, #map { height: 100%; }
     list-style: none;
 }
 
+.mapboxgl-popup-content div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .mapboxgl-popup-content button.btn {
     background-color: #0e9a48;
     border-color: #0e9a48;
