--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ html, body, #map { height: 100%; }
     align-items: center;
 }
 
-.mapboxgl-popup-content button.btn {
+.mapboxgl-popup-content a.btn {
     background-color: #0e9a48;
     border-color: #0e9a48;
     border-radius: 10pt;
