--- a/src/app/App.css
+++ b/src/app/App.css
@@ -22,7 +22,8 @@ html, body, #map { height: 100%; }
     margin: 20px;
     padding: 18px;
     z-index: 100;
-    border-radius: 5px;
+    border-radius: 4px;
+    box-shadow: 0 0 10px 2px rgba(0,0,0,.1);
 }
 
 #map-filters fieldset {
