--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,77 +1,3 @@
-/* src/App.css */
-
-body { 
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
-    flex-wrap: wrap;
-}
-
-#map { height: 100%; }
-
-#map-filters {
-    background-color: #FFFFFF !important;
-    color: #000;
-    box-sizing: border-box;
-    position: absolute;
-    width: fit-content;
-    top: 0;
-    left: 0;
-    margin: 20px;
-    padding: 18px;
-    z-index: 100;
-    border-radius: 4px;
-    box-shadow: 0 0 10px 2px rgba(0,0,0,.1);
-}
-
-#map-filters fieldset {
-    display: flex;
-    justify-content: space-between;
-    gap: 50px;
-}
-
-.filter-group {
-    display: flex;
-    flex-direction: column;
-}
-
-#map-filters label {
-    margin-bottom: 0.5rem;
-    font-size: small;
-}
-
-#map-filters select {
-    width: fit-content;
-    padding: 10px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-}
-
-.map-tooltip ul {
-    padding-left: 10px;
-    padding-right: 10px;
-    list-style: none;
-}
-
-.mapboxgl-popup-content div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.mapboxgl-popup-content a.btn {
-    background-color: #0e9a48;
-    border-color: #0e9a48;
-    border-radius: 10pt;
-    color: #fff;
-    padding: 10px;
-    text-decoration: none;
-}
-
-.mapboxgl-popup-content .selected {
-    background-color: #fecc08;
+body {
+    min-height: 100vh;
 }
