--- a/src/app/components/LegendControl.css
+++ b/src/app/components/LegendControl.css
@@ -5,7 +5,7 @@
     font-size: 1em;
     background: rgba(255, 255, 255);
     border-radius: 4px;
-    box-shadow: 0 0 10px 2px rgba(0,0,0,.1);
+    box-shadow: 0 0 10px 2px rgba(0,0,0,.3);
 }
 
 .legend-ctrl h3 {
@@ -24,6 +24,7 @@
     list-style-type: none;
     padding: 0;
     margin: 12px 4px 0;
+    min-height: 175px;
 }
 
 .legend-ctrl li {
