--- a/src/app/components/MapComponent.css
+++ b/src/app/components/MapComponent.css
@@ -15,7 +15,8 @@
 #map-filters fieldset {
     display: flex;
     justify-content: space-between;
-    gap: 50px;
+    gap: 8px;
+    flex-wrap: wrap;
 }
 
 .filter-group {
