--- a/src/app/components/MapComponent.css
+++ b/src/app/components/MapComponent.css
@@ -3,7 +3,7 @@
     color: #000;
     box-sizing: border-box;
     position: relative;
-    width: fit-content;
+    margin: auto;
     top: 0;
     left: 0;
     padding: 18px;
