remove App.css reference and make popup stay above the search bar

--- a/src/app/components/MapComponent.css
+++ b/src/app/components/MapComponent.css
@@ -42,6 +42,10 @@
     list-style: none;
 }
 
+.mapboxgl-popup {
+    z-index: 5;
+}
+
 .mapboxgl-popup-content div {
     display: flex;
     flex-direction: column;
