--- a/src/app/components/LegendControl/LegendControl.css
+++ b/src/app/components/LegendControl/LegendControl.css
@@ -12,7 +12,15 @@
     font-size: 1.1em;
     font-weight: bold;
     line-height: 1em;
+    margin-top: 0;
+}
+
+.legend-ctrl p {
+    font-size: 1em;
+    font-weight: bold;
+    line-height: 1.1em;
     margin: 0;
+    padding: 0;
 }
 
 .legend-ctrl h3 span {
